--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section id="hero-section">
                 <h1>Welcome to Earthnove!</h1>
                 <p>Download the 0.1 proto version and be part of an accessible evolving game with tons of possibilities and cool adventures and quests!</p>
-                <a href="https://github.com/Fraeddic/Earthnove/main/Earthnove 0.1 Proto.zip" class="button" download>Download Game</a>
+                <a href="https://raw.githubusercontent.com/Fraeddic/Earthnove/main/Earthnove 0.1 Proto.zip" class="button" download= "Earthnove 0.1 Proto.zip">Download Game</a>
             </section>
         </main>
 
